# VirtAI-Project

./: .env.example  .env.prod.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  OVERVIEW_REFACTOR.md  PLAN.md  PRODUCT.md  PROJECT_CONTEXT.md  README.md  REFACTOR_PLAN.md  SECURITY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  mcp.json  package-lock.json  parse_glb.py  read_log.py  script.py  systemDesign.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  _run_tests.py  dummy.md  dummy.txt  entrypoint.sh  migration.sql  pyproject.toml  requirements-dev.txt  requirements.txt  run_worker.py  sample_knowledge.txt  skills-lock.json  test_backend.py  test_chunker.py  test_db.py  test_e2e_rag_pipeline.py  test_imports.py  test_page_breaks.py  test_resolve_voice.py  test_ws_flow.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_hnsw_index.py  003_fix_vector_dimension.py  0618aecd13e3_enforce_unique_document_sha256.py  0618aecd13e4_refactor_unique_document_sha256.py  1f587d96a315_add_quizattempt_and_quizattemptanswer_.py  20260619_drop_chat_session_is_archived.py  20260621_remove_legacy_rag_projects.py  20260623_diagram_cache.py  20260623_quiz_attempts.py  20260623_summary_cache.py  20260623_visualization_cache.py  20260625_add_last_message_at.py  20260626_doc_chunk_idx.py  20260626_update_vector_1024.py  20260627_add_doc_indexes.py  20260628_update_vector_768.py  20260629_cascade_session_fk.py  README.md  a1723b819136_db_overhaul_phase3.py  b3dac6ac35b3_chunk_scope_versioning.py  b87cbd2c66e0_fix_duplicate_sha_constraints.py  bda96c4448eb_document_ingestion_upgrade.py
backend/app/: __init__.py  main.py  verifier.py
backend/app/api/v1/: dependencies.py  router.py
backend/app/application/: __init__.py
backend/app/application/animation/: __init__.py  animation_mapper.py  audio_analysis.py  audio_feature_fuser.py  intelligence_service.py  intent_scorer.py  profile_selector.py  timeline_builder.py
backend/app/application/auth/: __init__.py  auth_use_cases.py  authenticate.py
backend/app/application/chat/: __init__.py  chat_use_case.py  generate_title_use_case.py  handle_text_turn.py  prompt_builder.py  session_manager.py  session_manager_v2.py  stream_response.py
backend/app/application/explain/: explain_use_case.py
backend/app/application/rag/: __init__.py  diagram_use_case.py  ingest_document.py  ingest_documents.py  intent_classifier.py  nlp_operations.py  orchestrator.py  pipeline.py  quiz_use_case.py  response_formatter.py  retrieval_use_case.py  retrieve_context.py  start_ingestion_use_case.py  summary_use_case.py  token_budget.py  visualization_use_case.py
backend/app/application/services/: model_policy.py
backend/app/application/voice/: __init__.py  filler_coordinator.py  (+5 more)
backend/app/core/: config.py  database.py  errors.py  logging.py  security.py
backend/app/infrastructure/: __init__.py
backend/app/models/: user.py
backend/app/schemas/: __init__.py  audio.py  auth.py  chat.py  rag.py  voice_mode.py  ws_messages.py
backend/app/services/: audio_pipeline.py  auth_service.py
backend/app/shared/: __init__.py  audio_ids.py  config.py  csrf.py  database.py  error_envelope_middleware.py  errors.py  ids.py  key_manager.py  log_config.py  metrics.py  request_context.py  security.py
backend/app/websocket/: voice_mode_handler.py
backend/docs/: ARCHITECTURE.md  CODE_TOUR.md  RUNBOOK.md  auth_threat_model.md
backend/docs/examples/: example_audio_endpoint_usage.py  example_generate_usage.py  example_viseme_usage.py
backend/docs/refactor/: 00-audit.md  00-review.md  01-review.md  02-review.md  03-bench.md  03-review.md  04-review.md  05-review.md  06-review.md  07-review.md  08-review.md  10-review.md  11-review.md  12-review.md  13-review.md  14-review.md  14-test-report.md  15-quality-dashboard.md  15-review-observability.md  15-review.md  README.md
backend/load_tests/: test_rag_throughput.py  test_summary_concurrent.py
backend/scripts/: audit_auth_identity.py  clean.bat  clean.py  clean.sh  debug_cohere.py  eval_rag_baseline.py  generate_reports.py  golden_rag_test.py  run_benchmarks.py  run_quality_pipeline.sh  run_tests.sh  run_worker.py  system_healthcheck.py  trace_rag_pipeline.py  validate_production.py  verify_state.py
backend/scripts/utils/: test_imports.py  test_resolve_voice.py  test_ws_flow.py
backend/tests/: README.md  __init__.py  conftest.py  evaluate_rag.py  example_audio_endpoint_usage.py  example_generate_usage.py  example_viseme_usage.py  golden_queries.yaml  manual_test_audio_endpoint.py  rag_baseline_metrics.json  test_abort_cancellation.py  test_asr_manual_verification.py  test_asr_transcript_delivery_property.py  test_audio_buffer_manager.py  test_audio_endpoint.py  test_binary_frame_marker_byte.py  test_buffer_size_invariant_property.py  test_buffer_timeout_bugfix_exploration.py  test_buffer_vad_preservation_property.py  test_edge_tts_generate.py  test_pcm_error_handling.py  test_pcm_pipeline_integration.py  test_preservation_property.py  test_process_message.py  test_security_validations.py  test_viseme_generator_bugfix_c.py  test_viseme_integration.py  test_voice_mode_handler.py  test_voice_mode_integration.py  test_voice_mode_json_routing_bug.py  test_voice_mode_json_routing_preservation.py  test_webm_concatenation_bug_exploration.py  test_websocket_process_message.py
backend/tests/integration/: conftest.py  test_auth_lifecycle_real_services.py  test_chat_lifecycle_debug.py  test_chat_lifecycle_persistence.py  test_db_integrations.py  test_endpoints_health.py  test_explain_ws.py
backend/tests/manual/: test_asr_manual_verification.py  test_audio_endpoint.py
backend/tests/performance/: test_pcm_latency.py
backend/tests/presentation/: test_startup_readiness_and_ws.py  test_upload_session_validation.py
backend/tests/schemas/: test_chat_final.py  test_user_message_echo.py
backend/tests/shared/: test_auth_identity.py  test_healthcheck_intervals.py
backend/tests/unit/: test_recent_fixes.py
(+802 files in other folders)
